# lumin-ai

./: .allowlist  .codecov  .codecov.yml  .deepsource.toml  .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .replit  .secrets.baseline  BUILD_PROGRESS.md  BUILD_SUCCESS.md  LICENSE  README.md  codecov.yml  frontend-dependency-issue.json  index.html  monitor-build.sh  package-lock.json  package.json  prevent_nested_venv.sh  project_mgmt_summary.md  pyproject.toml  requirements.txt  setup.py  styles.css  tsconfig.json  vite.config.ts
.bolt/: ignore
.circleci/: config.yml
.devcontainer/: .dockerignore  .env.build  .env.example  BUILD_STATUS.md  BUILD_SUCCESS.md  COMMIT_MESSAGE.md  Dockerfile  Dockerfile.lite  Dockerfile.optimized  OPTIMIZATION_COMPLETE.md  OPTIMIZATION_SUMMARY.md  QUICK_REBUILD_GUIDE.md  README.md  build-optimized.sh  build.sh  devcontainer-features.json  devcontainer-lite.json  devcontainer.json  docker-compose.yml  fix-container-issues.sh  init-mongodb.js  install_python_deps.sh  mongodb-setup.sh  requirements-datascience.txt  requirements-dev.txt  requirements-ds.txt  requirements-lite.txt  requirements-ml.txt  setup.sh  test-optimization.sh
.devcontainer/lite/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: ci.yml  codecov-from-circleci.yml  codecov.yml  devcontainer-ci.yml
.monitoring/config/: monitoring.json
.reports/: ci_report_20250627_005952.json  ci_report_20250627_010559.json  ci_report_20250627_010911.json  ci_report_20250627_011337.json  ci_report_20250627_011947.json  ci_report_20250627_105819.json  ci_report_20250627_120613.json  ci_report_20250627_150102.json  ci_report_20250627_152118.json  ci_report_20250627_155652.json  ci_report_20250627_155857.json  ci_report_20250627_160056.json  ci_report_20250627_160404.json  ci_report_20250627_163045.json  ci_report_20250627_163230.json  ci_report_20250627_163727.json  ci_report_20250627_165220.json  ci_report_20250627_165310.json  ci_report_20250627_174306.json  ci_report_20250627_174419.json  ci_report_20250627_174532.json  ci_report_20250627_174643.json  ci_report_20250627_174748.json  ci_report_20250627_175733.json  ci_report_20250627_182106.json  ci_report_20250627_182152.json  ci_report_20250627_182527.json  ci_report_20250627_183525.json  ci_report_20250627_183606.json
assets/presentations/: LUMIN.AI--Project-Pitch-SlideDeck.pptx
components/: App.js  DocsHub.js  Sidebar.js  UtilComponents.js
data/: README.md
data-science/: README.md  setup_pipeline.py
data/examples/: sample_data.csv
deep-learning/: README.md  requirements.txt
deep-learning/notebooks/: 01-data-exploration.ipynb  02-sentiment-analysis-mvp.ipynb  03-participation-prediction.ipynb  03-preprocessing-pipeline.ipynb  04-text-classification.ipynb  05-advanced-transformers.ipynb
deep-learning/src/preprocessing/: data_augmentation.py  feature_extraction.py  pipeline.py  text_cleaning.py  tokenization.py
deep-learning/src/utils/: config.py
docs/: CONTAINER_MONITORING.md  CONTRIBUTING.md  MONITORING_SETUP_COMPLETE.md  PROJECT_SUMMARY.md  TEAM_ONBOARDING.md  git_lfs_guide.md
docs/architecture/: DataSci--MVP.md  DataSci--PRD.md  DataSci--ROADMAP.md  DeepLearn--MVP.md  DeepLearn--PRD.md  DeepLearn--ROADMAP.md  PROJECT--MVP.md  PROJECT--PRD.md  PROJECT--ROADMAP.md  UX--PRD.md  UX--ROADMAP.md  UX--backend_prd.md  UX--frontend_prd.md  UX--integration_prd.md  UX_mvp.md  WebDev--MVP.md  WebDev--PRD.md  WebDev--ROADMAP.md  WebDev--backend_prd.md  WebDev--frontend_prd.md  WebDev--integration_prd.md
lumin_ai/: utils.py
scripts/: README.md  __init__.py  batch_update_labels.py  ci_integration.py  comprehensive_setup.sh  container-env-check.sh  container-health-monitor.sh  container-performance-monitor.py  create_epics.py  create_milestones.py  delete_closed_issues.py  dev_env_check.sh  docker-cleanup.sh  fix-container-issues.sh  fix-container-simple.sh  gh-issue-creator.py  gh_issue_creator.py  github_client.py  link_issues_to_docs.py  pm_workflow_example.md  prd_parser.py  project_setup_validator.py  prune_backlog.py  quick-health-check.sh  run_ci.sh  setup-monitoring.sh  setup_git_lfs.sh  setup_github_token.sh  setup_project.sh  sync_issues_to_project.py  test_mongodb_connection.py  update_issue_labels.sh  validate-monitoring-setup.sh  validate_labels.py  verify_git_lfs.py  welcome-new-team-member.sh
src/: App.tsx
src/components/DataVisualization/: AccessibilityFeatures.tsx  AdvancedDashboard.tsx  ExportService.ts  ResponsiveWrapper.tsx
src/components/common/: Header.tsx  LazyComponents.tsx
src/hooks/: usePerformanceMonitoring.ts  usePerformanceMonitoring.tsx  useVisualizationData.ts
src/lumin_ai/: __init__.py  utils.py
src/utils/: bundleAnalyzer.ts  cacheManager.ts
tests/: test_basic.py  test_components.js  test_utils.py
ux-design/: README.md  accessibility-features.md  design-system.md  navigation-structure.md  user-guidance.md
web-development/: README.md
web-development/backend/: package-lock.json  package.json  server.js
web-development/backend/middleware/: errorHandler.js
web-development/backend/utils/: asyncHandler.js
web-development/frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web-development/frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  env.d.ts  index.css  main.tsx  types.ts
web-development/frontend/src/components/: DemographicAnalysisChart.tsx  TrustMetricsDashboard.tsx  TrustTimeSeriesChart.tsx
web-development/frontend/src/components/Dashboard/: Dashboard.tsx
web-development/frontend/src/components/DataVisualization/: DemographicComparison.tsx  SentimentAnalysis.tsx  TrustTrendChart.tsx
web-development/frontend/src/components/GovernanceMetrics/: DemographicAnalysis.tsx  MetricCard.test.tsx  MetricCard.tsx  TrustMetrics.tsx
web-development/frontend/src/components/common/: ErrorBoundary.tsx  Footer.tsx  (+4 more)
web-development/frontend/src/hooks/: useTrustTimeSeriesChart.ts
web-development/frontend/src/services/: api.test.ts  api.ts
web-development/frontend/src/types/: dashboard.ts
